# pithos

./: .bzrignore  .editorconfig  .gitignore  .gitmodules  .quickly  CHANGELOG  Copyright  MANIFEST.in  Makefile.am  README.md  autogen.sh  build_deb.sh  buildout.cfg  configure.ac  debug  debug.py  meson.build  meson_post_install.py  pithos.desktop.in  release.sh  requirements-osx.txt  run.py  setup.cfg  setup.py  zanata.xml
.github/: FUNDING.yml
.github/workflows/: CI.yml  codeql.yml
data/: io.github.Pithos.appdata.xml.in  io.github.Pithos.desktop.in  io.github.Pithos.gresource.xml  io.github.Pithos.gschema.xml  io.github.Pithos.service.in  meson.build  pithos  pithos.1  pithos.appdata.xml  pithos.appdata.xml.in  pithos.desktop  pithos.desktop.in  pithos.gresource.xml  pithos.gschema.xml
data/gtk/: help-overlay.ui  menus.ui
data/icons/: meson.build
data/ui/: AboutPithosDialog.ui  EqDialog.ui  MissingCoversDialog.ui  PithosWindow.ui  PreferencesPithosDialog.ui  SearchDialog.ui  SettingsPreferenceDialog.ui  SingleButtonSettingsBox.ui  StationsDialog.ui  about_pithos_dialog.xml  pithos_window.xml  preferences_pithos_dialog.xml  stations_dialog.xml
debian/: changelog  control  copyright  postinst  rules
docs/: conf.py  index.rst  meson.build  pithos.1
flatpak/: io.github.Pithos.json  python3-pylast.json
m4/: desktop.m4
pithos/: AboutPithosDialog.py  GstPlayer.py  PreferencesPithosDialog.py  SearchDialog.py  Secrets.py  StationsDialog.py  StationsPopover.py  __main__.py  application.py  blowfish.py  dbus_service.py  fakepiano.py  gi_composites.py  gobject_worker.py  migrate_settings.py  mpris.py  notification_icon.py  pithos.py  pithosconfig.py  player.py  plugin.py  pylast.py  scrobble.py  song_notify.py  sound_menu.py  util.py
pithos/data/ui/: AboutPithosDialog.ui  PithosWindow.ui  PreferencesPithosDialog.ui  SearchDialog.ui  StationsDialog.ui  app_menu.ui  search_dialog.xml
pithos/libpiano/: Makefile  __init__.py  config.h  http.c  piano.c  piano.h  piano.i  waitress.c  waitress.h  xml.c  xml.h
pithos/pandora/: __init__.py  blowfish.py  data.py  fake.py  pandora.py  pandora_keys.py  xmlrpc.py
pithos/players/: gstplayer.py
pithos/plugins/: 10_band_equalizer.py  __init__.py  _dbus_service.py  _mpris.py  auto_volume_normalization.py  download.py  find_missing_covers.py  inhibit_screensaver.py  journald_logging.py  lastfm.py  mediakeys.py  mpris.py  notification_icon.py  notify.py  save_on_logout.py  screensaver_pause.py  scrobble.py
pithos/plugins/dbus_util/: DBusServiceObject.py  GioNotify.py
po/: POTFILES  POTFILES.in
rpms/: pithos.spec
